Get include directory directly from Python via distutils.sysconfig.get_python_inc().

--- a/bem_pycuda/tree/Makefile
+++ b/bem_pycuda/tree/Makefile
@@ -2,6 +2,9 @@ SWIG = swig
 SWIG_OPTS = -c++ -python
 CC = g++
 OPTS = -fPIC -O3 -funroll-loops -msse3 -fopenmp
+PYTHON ?= python
+PYTHON_INCLUDE_DIR = $(shell $(PYTHON) -c 'from distutils.sysconfig import get_python_inc; print(get_python_inc())')
+PYTHON_CFLAGS = -I$(PYTHON_INCLUDE_DIR)
 
 all: calc_mult mult dir link
 
@@ -15,11 +18,11 @@ dir: direct.i
 	$(SWIG) $(SWIG_OPTS) $?
 
 link:  
-	$(CC) $(OPTS) -c calculateMultipoles.cpp calculateMultipoles_wrap.cxx -I/usr/include/python2.6 -I/usr/lib/python2.6
+	$(CC) $(OPTS) -c calculateMultipoles.cpp calculateMultipoles_wrap.cxx $(PYTHON_CFLAGS)
 	$(CC) $(OPTS) -shared $? -o _calculateMultipoles.so calculateMultipoles.o calculateMultipoles_wrap.o
-	$(CC) $(OPTS) -c multipole.cpp multipole_wrap.cxx -I/usr/include/python2.6 -I/usr/lib/python2.6
+	$(CC) $(OPTS) -c multipole.cpp multipole_wrap.cxx $(PYTHON_CFLAGS)
 	$(CC) $(OPTS) -shared $? -o _multipole.so multipole.o multipole_wrap.o
-	$(CC) $(OPTS) -c direct.cpp direct_wrap.cxx -I/usr/include/python2.6 -I/usr/lib/python2.6
+	$(CC) $(OPTS) -c direct.cpp direct_wrap.cxx $(PYTHON_CFLAGS)
 	$(CC) $(OPTS) -shared $? -o _direct.so direct.o direct_wrap.o
 
 clean:
@@ -32,3 +35,6 @@ clean:
 
 .cpp.o:
 	$(CC) $(OPTS) -c $< -o $@
+
+print-%:
+	echo $($*)
